<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vlposition.MainActivity" >

   <Button android:id="@+id/takephoto" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="拍照"/>

<ImageView
    android:id="@+id/imageview"
    android:layout_width="130dp"
    android:layout_height="175dp"
    android:layout_alignLeft="@+id/takephoto"
    android:layout_below="@id/takephoto" />
<TextView
    android:id="@+id/East"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/imageview"
    android:text="东：" />

<EditText
    android:id="@+id/EditEast"
    android:hint="-130"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/East" />

<TextView
    android:id="@+id/West"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/imageview"
    android:layout_below="@id/East"
    android:text="西：" />
<EditText 
    android:id="@+id/EditWest"
     android:hint="53"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_below="@id/EditEast"
    android:layout_toRightOf="@id/West"
    />
<TextView
    android:id="@+id/South"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/imageview"
     android:layout_below="@id/West"
    android:text="南：" />
<EditText 
    android:id="@+id/EditSouth"
     android:hint="146"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/South"
    android:layout_below="@id/EditWest"
    />
<TextView
    android:id="@+id/North"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/imageview"
     android:layout_below="@id/South"
    android:text="北：" />
<EditText 
    android:id="@+id/EditNorth"
     android:hint="-33"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_toRightOf="@id/North"
    android:layout_below="@id/EditSouth"
    />

          <!-- dp是相对单位，手机拍照默认比例130 175dp -->

<Button android:id="@+id/chuli" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview"
        android:text="@string/chuli"
    />

<TextView
    android:id="@+id/shuju"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/chuli"
    android:text="@string/shuju" />
<TextView
    android:id="@+id/areashuju"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/shuju"
    android:text="@string/areashuju" />
<TextView
    android:id="@+id/directionshuju"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/areashuju"
    android:text="@string/directionshuju" />
<TextView
    android:id="@+id/resultshuju"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/directionshuju"
    android:text="@string/resultshuju" />

<Button android:id="@+id/clear" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultshuju"
        android:text="@string/clear"/>
<Button  android:id="@+id/end" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear"
        android:text="@string/end"/>

</RelativeLayout>
